Resolves: tdf#167419 Changing the borders of a table doesn't refresh bottom

The bottom border can remain un-refreshed. That border is outside the
FrameArea of the table when the default CollapsingBorders is enabled.
Add it in here for the last row when determining the area to repaint.

Change-Id: I45cecd11e7d0d53905b3d6d6b3de83e1a28a468d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/188480
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>
Tested-by: Jenkins
(cherry picked from commit e9abbdd178d6a01f6ecd8642920c52902312e470)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/189494
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>